# automateAI

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  demo.py  env.example  main.py  pyproject.toml  requirements.txt  run.sh  test_document.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
src/automateai/: __init__.py  app.py  cli.py  rag.py
tests/: test_imports.py
