[project]
name = "automateai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.99.9",
    "qdrant-client>=1.15.1",
    "streamlit>=1.48.1",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "tiktoken>=0.8.0",
    "fastembed>=0.4.2",
]
